--- a/app/package.json
+++ b/app/package.json
@@ -16,7 +16,14 @@
         "tailwindcss": "^3.2.1",
         "typescript": "^5.0.2",
         "vite": "^5.0",
-        "vue": "^3.4.0",
+        "vue": "^3.5.13",
         "vue-tsc": "^1.8.27"
+    },
+    "dependencies": {
+        "@fortawesome/fontawesome-svg-core": "^6.7.2",
+        "@fortawesome/free-brands-svg-icons": "^6.7.2",
+        "@fortawesome/free-regular-svg-icons": "^6.7.2",
+        "@fortawesome/free-solid-svg-icons": "^6.7.2",
+        "bootstrap": "^4.6.2"
     }
 }
